Phone header screenshot, additional text

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
       <p>I started out with a neon green header - just experimenting with the greens of the EWB brand. There was little contrast with the lighter colours of the three sections which I wanted to make stand out. I opted for a similar darker colour as the original EWB website.As a result, I kept the background white instead of the original darker colours in the mock ups.
       </p>
       <figure>
-        <img src="images/greenheader.png" alt="Green Header" width="100%">
-        <figcaption>No headers were placed earlier in the development phase</figcaption>
+      <img src="images/greenheader.png" alt="Green Header" width="100%">
+      <figcaption>No headers were placed earlier in the development phase</figcaption>
       </figure>
+      <p>The directories in the header would seem small and compressed when viewed from smaller screen sizes. They were put inside a dropdown.
+      <img src="images/phone_header.png" alt="Phone Header" width="100%">
 
 			<h3 id="footer">Footer</h3>
 			<p>A footer containing the social media links, contact and other information regarding the organisation was added to provide some background information regarding the company. Both the header and footer provided a users with a sense of control and direction.</p>
